--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -37,10 +37,10 @@
     <Reference Include="System.XML" />
 	<Reference Include="System.Core" />
 	<Reference Include="UnityEngine">
-	  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
+	  <HintPath>C:/Program Files (x86)/Unity 4.2.1f4/Editor/Data/Managed/UnityEngine.dll</HintPath>
 	</Reference>
 	<Reference Include="UnityEditor">
-	  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
+	  <HintPath>C:/Program Files (x86)/Unity 4.2.1f4/Editor/Data/Managed/UnityEditor.dll</HintPath>
 	</Reference>
   </ItemGroup>
   <ItemGroup>
@@ -49,6 +49,7 @@
      <Compile Include="Assets\Scripts\Chris\InitialLevelLock.cs" />
      <Compile Include="Assets\Scripts\Chris\InputScript.cs" />
      <Compile Include="Assets\Scripts\Chris\LevelSelect.cs" />
+     <Compile Include="Assets\Scripts\Chris\LevelSelectX.cs" />
      <Compile Include="Assets\Scripts\Chris\MainMenu.cs" />
      <Compile Include="Assets\Scripts\Chris\OrientationScript.cs" />
      <Compile Include="Assets\Scripts\Chris\PauseMenu.cs" />
